--- a/content/publication/esmaeili-2019-structured/cite.bib
+++ b/content/publication/esmaeili-2019-structured/cite.bib
@@ -1,9 +1,9 @@
 @inproceedings{esmaeili2019structured,
- author = {Esmaeili, Babak and Wu, Hao and Jain, Sarthak and Bozkurt, Alican and Siddharth, Narayanaswamy and Paige, Brooks and Brooks, Dana H and Dy, Jennifer and Meent, Jan-Willem},
+ author = {Esmaeili, Babak and Huang, Hongyi and Wallace, Byron and van de Meent, Jan-Willem},
  booktitle = {The 22nd International Conference on Artificial Intelligence and Statistics},
  organization = {PMLR},
- pages = {2525--2534},
- title = {Structured disentangled representations},
+ pages = {3429--3439},
+ title = {Structured neural topic models for reviews},
  year = {2019}
 }
 
