--- a/publications.bib
+++ b/publications.bib
@@ -1,4 +1,4 @@
-@inproceedings{esmaeili2019structured,
+@inproceedings{esmaeili2019structureda,
   title={Structured disentangled representations},
   author={Esmaeili, Babak and Wu, Hao and Jain, Sarthak and Bozkurt, Alican and Siddharth, Narayanaswamy and Paige, Brooks and Brooks, Dana H and Dy, Jennifer and Meent, Jan-Willem},
   booktitle={The 22nd International Conference on Artificial Intelligence and Statistics},
@@ -7,7 +7,7 @@
   organization={PMLR}
 }
 
-@inproceedings{esmaeili2019structured,
+@inproceedings{esmaeili2019structuredb,
   title={Structured neural topic models for reviews},
   author={Esmaeili, Babak and Huang, Hongyi and Wallace, Byron and van de Meent, Jan-Willem},
   booktitle={The 22nd International Conference on Artificial Intelligence and Statistics},
