--- a/content/publication/esmaeili-2019-structureda/cite.bib
+++ b/content/publication/esmaeili-2019-structureda/cite.bib
@@ -1,5 +1,5 @@
 @inproceedings{esmaeili2019structureda,
- author = {Esmaeili, Babak and Wu, Hao and Jain, Sarthak and Bozkurt, Alican and Siddharth, Narayanaswamy and Paige, Brooks and Brooks, Dana H and Dy, Jennifer and Meent, Jan-Willem},
+ author = {Esmaeili, Babak and Wu, Hao and Jain, Sarthak and Bozkurt, Alican and Siddharth, Narayanaswamy and Paige, Brooks and Brooks, Dana H and Dy, Jennifer and Meent, Jan-Willem van de},
  booktitle = {The 22nd International Conference on Artificial Intelligence and Statistics},
  organization = {PMLR},
  pages = {2525--2534},
