--- a/content/publication/esmaeili-2019-structureda/cite.bib
+++ b/content/publication/esmaeili-2019-structureda/cite.bib
@@ -3,7 +3,7 @@
  booktitle = {The 22nd International Conference on Artificial Intelligence and Statistics},
  organization = {PMLR},
  pages = {2525--2534},
- title = {Structured disentangled representations},
+ title = {Structured Disentangled Representations},
  year = {2019}
 }
 
