--- a/publications.bib
+++ b/publications.bib
@@ -23,9 +23,26 @@
     year = {2018}
 }
 
-@article{bozkurt2019evaluating,
-  title={Evaluating Combinatorial Generalization in Variational Autoencoders},
+@inproceedings{bozkurt2019rate,
+  title={Rate-Regularization and Generalization in VAEs},
   author={Bozkurt, Alican and Esmaeili, Babak and Brooks, Dana H and Dy, Jennifer G and van de Meent, Jan-Willem},
-  journal={arXiv preprint arXiv:1911.04594},
-  year={2019}
+  booktitle={The 24th International Conference on Artificial Intelligence and Statistics},
+  year={2021}
+}
+
+@inproceedings{wu2020conjugate,
+  title = {Conjugate Energy-based Models},
+  author = {Wu, Hao and Esmaeili, Babak, and Wick, Michael and Tristan, Jean-Baptiste and {van de Meent}, Jan-Willem},
+  year = {2021},
+  booktitle={Third Symposium on Advances in Approximate Bayesian Inference},
+  url={https://openreview.net/forum?id=4k58RmAD02},
+}
+
+@inproceedings{
+    anonymous2021nested,
+    title={Nested Variational Inference},
+    author={Zimmermann, Heiko and Wu, Hao and Esmaeili, Babak, and Stites, Sam and {van de Meent}, Jan-Willem},
+    booktitle={Third Symposium on Advances in Approximate Bayesian Inference},
+    year={2021},
+    url={https://openreview.net/forum?id=tvxL1eqPl9Y},
 }
