--- a/content/publication/zimmermann-2021-nested/cite.bib
+++ b/content/publication/zimmermann-2021-nested/cite.bib
@@ -1,5 +1,5 @@
 @inproceedings{
-    anonymous2021nested,
+    zimmermann2021nested,
     title={Nested Variational Inference},
     author={Zimmermann, Heiko and Wu, Hao and Esmaeili, Babak, and Stites, Sam and {van de Meent}, Jan-Willem},
     booktitle={Third Symposium on Advances in Approximate Bayesian Inference},
