--- a/publications.bib
+++ b/publications.bib
@@ -39,7 +39,7 @@
 }
 
 @inproceedings{
-    anonymous2021nested,
+    zimmermann2021nested,
     title={Nested Variational Inference},
     author={Zimmermann, Heiko and Wu, Hao and Esmaeili, Babak, and Stites, Sam and {van de Meent}, Jan-Willem},
     booktitle={Third Symposium on Advances in Approximate Bayesian Inference},
