--- a/content/publication/bozkurt-2019-evaluating/cite.bib
+++ b/content/publication/bozkurt-2019-evaluating/cite.bib
@@ -1,7 +1,6 @@
-@article{bozkurt2019evaluating,
- author = {Bozkurt, Alican and Esmaeili, Babak and Brooks, Dana H and Dy, Jennifer G and van de Meent, Jan-Willem},
- journal = {arXiv preprint arXiv:1911.04594},
- title = {Evaluating Combinatorial Generalization in Variational Autoencoders},
- year = {2019}
+@inproceedings{bozkurt2019rate,
+  title={Rate-Regularization and Generalization in VAEs},
+  author={Bozkurt*, Alican and Esmaeili*, Babak and Brooks, Dana H and Dy, Jennifer G and van de Meent, Jan-Willem},
+  booktitle={The 24th International Conference on Artificial Intelligence and Statistics},
+  year={2021}
 }
-
