--- a/content/publication/wu-2021-conjugate/cite.bib
+++ b/content/publication/wu-2021-conjugate/cite.bib
@@ -1,7 +1,15 @@
-@inproceedings{wu2020conjugate,
-  title = {Conjugate Energy-based Models},
-  author = {Wu, Hao and Esmaeili, Babak, and Wick, Michael and Tristan, Jean-Baptiste and {van de Meent}, Jan-Willem},
-  year = {2021},
-  booktitle={Third Symposium on Advances in Approximate Bayesian Inference},
-  url={https://openreview.net/forum?id=4k58RmAD02},
+@inproceedings{pmlr-v139-wu21a,
+  title = 	 {Conjugate Energy-Based Models},
+  author =       {Wu*, Hao and Esmaeili*, Babak and Wick, Michael and Tristan, Jean-Baptiste and Van De Meent, Jan-Willem},
+  booktitle = 	 {Proceedings of the 38th International Conference on Machine Learning},
+  pages = 	 {11228--11239},
+  year = 	 {2021},
+  editor = 	 {Meila, Marina and Zhang, Tong},
+  volume = 	 {139},
+  series = 	 {Proceedings of Machine Learning Research},
+  month = 	 {18--24 Jul},
+  publisher =    {PMLR},
+  pdf = 	 {http://proceedings.mlr.press/v139/wu21a/wu21a.pdf},
+  url = 	 {http://proceedings.mlr.press/v139/wu21a.html},
+  abstract = 	 {In this paper, we propose conjugate energy-based models (CEBMs), a new class of energy-based models that define a joint density over data and latent variables. The joint density of a CEBM decomposes into an intractable distribution over data and a tractable posterior over latent variables. CEBMs have similar use cases as variational autoencoders, in the sense that they learn an unsupervised mapping from data to latent variables. However, these models omit a generator network, which allows them to learn more flexible notions of similarity between data points. Our experiments demonstrate that conjugate EBMs achieve competitive results in terms of image modelling, predictive power of latent space, and out-of-domain detection on a variety of datasets.}
 }
