--- a/content/publication/zimmermann-2021-nested/cite.bib
+++ b/content/publication/zimmermann-2021-nested/cite.bib
@@ -1,8 +1,6 @@
-@inproceedings{
-    zimmermann2021nested,
-    title={Nested Variational Inference},
-    author={Zimmermann, Heiko and Wu, Hao and Esmaeili, Babak, and Stites, Sam and {van de Meent}, Jan-Willem},
-    booktitle={Third Symposium on Advances in Approximate Bayesian Inference},
-    year={2021},
-    url={https://openreview.net/forum?id=tvxL1eqPl9Y},
+@inproceedings{zimmermann2021nested,
+  title={Nested Variational Inference},
+  author={Zimmermann, Heiko and Wu, Hao and Esmaeili, Babak and van de Meent, Jan-Willem},
+  booktitle={Advances in Neural Information Processing Systems},
+  year={2021}
 }
