update featured image

--- a/publications.bib
+++ b/publications.bib
@@ -46,3 +46,13 @@
     year={2021},
     url={https://openreview.net/forum?id=tvxL1eqPl9Y},
 }
+
+@inproceedings{
+esmaeili2023topological,
+title={Topological Obstructions and How to Avoid Them},
+author={Babak Esmaeili and Robin Walters and Heiko Zimmermann and Jan-Willem van de Meent},
+booktitle={Thirty-seventh Conference on Neural Information Processing Systems},
+year={2023},
+url={https://openreview.net/forum?id=1tviRBNxI9}
+}
+
